# synapse-shell

builtin-extensions/extension_manager/: extman.h
builtin-extensions/module_manager/: modman.h
include/shell/: init.h
include/shell/defines/: export.h  opaque_handle.h
include/shell/extension/: extension.h  extension_type.h
include/shell/extension/details/: shell_extension_init.h  shell_extension_manip.h  shell_extension_type.h
include/shell/grammar/: grammar_parse.h  grammar_string.h  grammar_type.h
include/shell/grammar/details/: shell_grammar_parse.h  shell_grammar_string.h  shell_grammar_type.h
include/shell/stream/: stream_io.h  stream_stdio.h  stream_type.h
include/shell/stream/details/: shell_stream_io.h  shell_stream_stdio.h  shell_stream_type.h
source/: CMakeLists.txt  init.c  main.c
source/extension/: extension.c
source/extension/details/: shell_extension_init.c  shell_extension_manip.c
source/extension/extension_manager/: extman.c
source/extension/module_manager/: modman.c
source/grammar/: grammar_parse.c  grammar_string.c
source/grammar/details/: shell_grammar_parse.c  shell_grammar_string.c
source/stream/: stream_io.c  stream_stdio.c
source/stream/details/: shell_stream_io.c  shell_stream_stdio.c
